add Notifications table, GetNotifications endpoint
